--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -21,9 +21,9 @@ provider:
   # Use these variables in the functions and resouorces section below. For example,
   # ${self:provider.environment.ATTACHMENT_S3_BUCKET}
   environment:
-    TODOS_TABLE: Todos-${self:provider.stage}
+    SONGS_TABLE: Songs-${self:provider.stage}
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
-    ATTACHMENT_S3_BUCKET: udacity-c4-bucket-${self:provider.stage}
+    ATTACHMENT_S3_BUCKET: udacity-c5-bucket-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
   logs:
@@ -35,12 +35,12 @@ functions:
 
   # TODO: Configure this function -
   # Provide iamRoleStatements property for performing Actions on DynamoDB
-  GetTodos:
-    handler: src/lambda/http/getTodos.handler
+  GetSongs:
+    handler: src/lambda/http/getSongs.handler
     events:
       - http:
           method: get
-          path: todos
+          path: songs
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -48,47 +48,47 @@ functions:
         Action:
           - dynamodb:Query
         Resource:
-          - 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}'
-          - 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.TODOS_CREATED_AT_INDEX}'
+          - 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SONGS_TABLE}'
+          - 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SONGS_TABLE}/index/${self:provider.environment.TODOS_CREATED_AT_INDEX}'
 
   # TODO: Configure this function -
   # Provide iamRoleStatements property. Decide the Actions and AWS Resource.
   # To refer to an AWS resource defined in the "Resources" section, you can use "Resource: !GetAtt <resource-name>.Arn"
   # To validate incoming HTTP requests, we have provided the request schemas in function definition below.
-  CreateTodo:
-    handler: src/lambda/http/createTodo.handler
+  CreateSong:
+    handler: src/lambda/http/createSong.handler
     events:
       - http:
           method: post
-          path: todos
+          path: songs
           cors: true
           authorizer: Auth
           reqValidatorName: RequestBodyValidator
           request:
             schemas:
-              application/json: ${file(models/create-todo-model.json)}
+              application/json: ${file(models/create-song-model.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
           - xray:PutTelemetryRecords
           - xray:PutTraceSegments
           - dynamodb:PutItem
-        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}'
+        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SONGS_TABLE}'
 
   # TODO: Configure this function
   # Provide property for setting up CORS, Authorizer, iamRoleStatements, and request schemas
-  UpdateTodo:
-    handler: src/lambda/http/updateTodo.handler
+  UpdateSong:
+    handler: src/lambda/http/updateSong.handler
     events:
       - http:
           method: patch
-          path: todos/{todoId}
+          path: songs/{songId}
           cors: true
           authorizer: Auth
           reqValidatorName: RequestBodyValidator
           request:
             schemas:
-              application/json: ${file(models/update-todo-model.json)}
+              application/json: ${file(models/update-song-model.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -96,16 +96,16 @@ functions:
           - xray:PutTraceSegments
           - dynamodb:UpdateItem
           - dynamodb:GetItem
-        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}'
+        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SONGS_TABLE}'
 
   # TODO: Configure this function
   # Provide property for setting up CORS, Authorizer, iamRoleStatements
-  DeleteTodo:
-    handler: src/lambda/http/deleteTodo.handler
+  DeleteSong:
+    handler: src/lambda/http/deleteSong.handler
     events:
       - http:
           method: delete
-          path: todos/{todoId}
+          path: songs/{songId}
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -115,7 +115,7 @@ functions:
           - xray:PutTraceSegments
           - dynamodb:GetItem
           - dynamodb:DeleteItem
-        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}'
+        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SONGS_TABLE}'
 
   # TODO: Configure this function
   # Provide property for setting up CORS, Authorizer, iamRoleStatements
@@ -124,7 +124,7 @@ functions:
     events:
       - http:
           method: post
-          path: todos/{todoId}/attachment
+          path: songs/{songId}/attachment
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -141,7 +141,7 @@ functions:
           - xray:PutTraceSegments
           - dynamodb:UpdateItem
           - dynamodb:GetItem
-        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}'
+        Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SONGS_TABLE}'
 
 resources:
   Resources:
@@ -169,21 +169,21 @@ resources:
         ValidateRequestParameters: false
 
     # TODO: Create a DynamoDB table with local secondary index and a composite key
-    TodosTable:
+    SongsTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: '${self:provider.environment.TODOS_TABLE}'
+        TableName: '${self:provider.environment.SONGS_TABLE}'
         AttributeDefinitions:
           - AttributeName: userId
             AttributeType: S
-          - AttributeName: todoId
+          - AttributeName: songId
             AttributeType: S
           - AttributeName: createdAt
             AttributeType: S
         KeySchema:
           - AttributeName: userId
             KeyType: HASH
-          - AttributeName: todoId
+          - AttributeName: songId
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
         LocalSecondaryIndexes:
