--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-todo-app",
+  "name": "serverless-song-app",
   "version": "1.0.0",
   "description": "Serverless TODO image app",
   "dependencies": {
@@ -12,22 +12,22 @@
     "middy": "^0.24.0",
     "source-map-support": "^0.5.21",
     "uuid": "^3.4.0",
-    "winston": "^3.10.0"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.122",
+    "@types/aws-lambda": "^8.10.124",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^10.17.60",
-    "aws-sdk": "^2.1467.0",
+    "aws-sdk": "^2.1474.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-plugin-canary-deployments": "^0.4.8",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-reqvalidator-plugin": "^1.0.4",
     "serverless-webpack": "^5.13.0",
-    "ts-loader": "^9.4.4",
+    "ts-loader": "^9.5.0",
     "typescript": "^4.9.5",
-    "webpack": "^5.88.2"
+    "webpack": "^5.89.0"
   },
   "author": "Ivan Mushketyk",
   "license": "MIT"
